# ByteEater

./: .gitignore  CMakeLists.txt  buildUnixDarwin.sh  buildWin.bat
.github/workflows/: c-cpp.yml  cmake-multi-platform.yaml
ByteEater/: ByteEater.cpp  ByteEater.h  CMakeLists.txt  File.cpp  File.h
